--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "animejs": "^4.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
